<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white" />

        <ImageButton
            android:id="@+id/searchBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="67dp"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="80dp"
            android:contentDescription="@string/search_btn_content_desc"
            android:elevation="8dp"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_search" />

        <ImageButton
            android:id="@+id/profileBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="57dp"
            android:layout_height="56dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="#FCFFFFFF"
            android:contentDescription="@string/profile_btn_content_desc"
            android:elevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <ImageButton
                android:id="@+id/homeBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/home"
                android:src="@android:drawable/ic_input_add" />

            <ImageButton
                android:id="@+id/friendsBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/friends"
                android:src="@android:drawable/ic_dialog_alert" />

            <ImageButton
                android:id="@+id/messagesBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/messages"
                android:src="@android:drawable/ic_menu_zoom" />

            <ImageButton
                android:id="@+id/webBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:layout_weight="1"
                android:contentDescription="@string/web"
                android:src="@android:drawable/stat_sys_upload" />

            <ImageButton
                android:id="@+id/hamburger"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/settings"
                android:src="@android:drawable/ic_delete" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/feed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#757474"
            android:backgroundTint="#736F6F"
            android:paddingBottom="200dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@id/bottomBar"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:id="@+id/feeds"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:background="#888686"
                android:orientation="vertical">

                <!-- Feed item -->

                <LinearLayout
                    android:id="@+id/unit_feed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Profile picture and name -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/profileImageView"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginEnd="8dp"
                            android:background="#3F51B5"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/ic_launcher_foreground" />

                        <TextView
                            android:id="@+id/nameTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/john_doe"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <!-- Description -->
                    <TextView
                        android:id="@+id/descriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <!-- Picture -->
                    <ImageView
                        android:id="@+id/pictureImageView"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/black"
                        android:contentDescription="@string/post"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                    <!-- Likes and comments -->
                    <TextView
                        android:id="@+id/likesCommentsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/_120_likes_50_comments"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <!-- Action buttons -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/likeButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/like_text" />

                        <Button
                            android:id="@+id/commentButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/comment_text" />

                        <Button
                            android:id="@+id/shareButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/share_text" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Profile picture and name -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginEnd="8dp"
                            android:background="#3F51B5"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/ic_launcher_foreground" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="John Doe"
                            android:textColor="#020202"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <!-- Description -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <!-- Picture -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/black"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/ic_launcher_foreground" />

                    <!-- Likes and comments -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/_120_likes_50_comments"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <!-- Action buttons -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/like_text" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:text="@string/comment_text" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/share_text" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/bottomBar"
            android:layout_width="360dp"
            android:layout_height="51dp"
            android:background="#906750A3"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status_text" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/photo_text" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/check_in_text" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>